# libphpscrew

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  libphpscrew.pc.in
include/: Makefile.am  php-screw-internal.h  php-screw.h
libsrc/: Makefile.am  screw.c  zencode.c
